[gd_scene load_steps=33 format=2]

[ext_resource path="res://Stage 5 (Cutscene)/scene 5.png" type="Texture" id=1]
[ext_resource path="res://Stage 5 (Cutscene)/scene 1.png" type="Texture" id=2]
[ext_resource path="res://Stage 5 (Cutscene)/scene 4.png" type="Texture" id=3]
[ext_resource path="res://Stage 5 (Cutscene)/scene 3.png" type="Texture" id=4]
[ext_resource path="res://Stage 5 (Cutscene)/scene 2.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Cutscene.gd" type="Script" id=6]
[ext_resource path="res://Fonts/Chikarego2.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="StyleBoxTexture" id=6]

[sub_resource type="StyleBoxTexture" id=7]

[sub_resource type="StyleBoxTexture" id=8]

[sub_resource type="StyleBoxTexture" id=9]

[sub_resource type="StyleBoxTexture" id=10]

[sub_resource type="StyleBoxTexture" id=11]

[sub_resource type="StyleBoxTexture" id=12]

[sub_resource type="StyleBoxTexture" id=13]

[sub_resource type="StyleBoxTexture" id=14]

[sub_resource type="StyleBoxTexture" id=15]

[sub_resource type="StyleBoxTexture" id=16]

[sub_resource type="StyleBoxTexture" id=17]

[sub_resource type="StyleBoxTexture" id=18]

[sub_resource type="StyleBoxTexture" id=19]

[sub_resource type="StyleBoxTexture" id=20]

[sub_resource type="StyleBoxTexture" id=21]

[sub_resource type="StyleBoxTexture" id=22]

[sub_resource type="StyleBoxTexture" id=23]

[sub_resource type="StyleBoxTexture" id=24]

[sub_resource type="StyleBoxTexture" id=25]

[node name="Cutscene" type="Control"]
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 580.0
margin_bottom = 364.0
texture = ExtResource( 2 )
expand = true

[node name="Selector" type="Label" parent="TextureRect"]
margin_left = 529.0
margin_top = 328.0
margin_right = 575.0
margin_bottom = 342.0
custom_fonts/font = ExtResource( 7 )
text = ">"

[node name="Button" type="Button" parent="TextureRect"]
margin_left = 537.0
margin_top = 326.0
margin_right = 579.0
margin_bottom = 346.0
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Next"

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
margin_right = 580.0
margin_bottom = 364.0
texture = ExtResource( 5 )
expand = true

[node name="Selector" type="Label" parent="TextureRect2"]
margin_left = 528.0
margin_top = 334.0
margin_right = 574.0
margin_bottom = 348.0
text = ">"

[node name="Button2" type="Button" parent="TextureRect2"]
margin_left = 536.0
margin_top = 331.0
margin_right = 578.0
margin_bottom = 351.0
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Next"

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
margin_right = 580.0
margin_bottom = 364.0
texture = ExtResource( 4 )
expand = true

[node name="Selector" type="Label" parent="TextureRect3"]
margin_left = 528.0
margin_top = 327.0
margin_right = 574.0
margin_bottom = 341.0
text = ">"

[node name="Button3" type="Button" parent="TextureRect3"]
margin_left = 535.0
margin_top = 324.0
margin_right = 577.0
margin_bottom = 344.0
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "Next"

[node name="TextureRect4" type="TextureRect" parent="."]
visible = false
margin_right = 580.0
margin_bottom = 364.0
texture = ExtResource( 3 )
expand = true

[node name="Selector" type="Label" parent="TextureRect4"]
margin_left = 527.0
margin_top = 324.0
margin_right = 573.0
margin_bottom = 338.0
text = ">"

[node name="Button4" type="Button" parent="TextureRect4"]
margin_left = 535.0
margin_top = 322.0
margin_right = 577.0
margin_bottom = 342.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
text = "Next"

[node name="TextureRect5" type="TextureRect" parent="."]
visible = false
margin_right = 580.0
margin_bottom = 364.0
texture = ExtResource( 1 )
expand = true

[node name="Button5" type="Button" parent="TextureRect5"]
margin_left = 423.0
margin_top = 255.0
margin_right = 580.0
margin_bottom = 363.0
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 22 )
custom_styles/focus = SubResource( 23 )
custom_styles/disabled = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
text = "Voltar ao Menu"

[connection signal="pressed" from="TextureRect/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="TextureRect2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="TextureRect3/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="TextureRect4/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="TextureRect5/Button5" to="." method="_on_Button5_pressed"]
